syntax = "proto3";

package main;

option go_package = "./proto";

// 添加产品分类
message AddProductCategoryReq {
  int64 id = 1; //
  int64 parent_id = 2; //上机分类的编号：0表示一级分类
  string name = 3; //商品分类名称
  int32 level = 4; //分类级别：0->1级；1->2级
  int32 product_count = 5; //商品数量
  string product_unit = 6; //商品数量
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int32 show_status = 8; //显示状态：0->不显示；1->显示
  int32 sort = 9; //排序
  string icon = 10; //图标
  string keywords = 11; //关键字
  string description = 12; //描述/
  repeated int64 ProductAttributeIdList = 13;
}

message AddProductCategoryResp {
  string pong = 1;
}

// 删除产品分类
message DeleteProductCategoryReq {
  repeated int64 ids = 1;
}

message DeleteProductCategoryResp {
  string pong = 1;
}

// 更新产品分类
message UpdateProductCategoryReq {
  int64 id = 1; //
  int64 parent_id = 2; //上机分类的编号：0表示一级分类
  string name = 3; //商品分类名称
  int32 level = 4; //分类级别：0->1级；1->2级
  int32 product_count = 5; //商品数量
  string product_unit = 6; //商品数量
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int32 show_status = 8; //显示状态：0->不显示；1->显示
  int32 sort = 9; //排序
  string icon = 10; //图标
  string keywords = 11; //关键字
  string description = 12; //描述
  repeated int64 ProductAttributeIdList = 13;
}

message UpdateProductCategoryResp {
  string pong = 1;
}

// 更新产品分类状态
message UpdateProductCategoryStatusReq {
  repeated int64 ids = 1; //
  int32 status = 2;


}

message UpdateProductCategoryStatusResp {
  string pong = 1;
}

// 查询产品分类详情
message QueryProductCategoryDetailReq {
    int64 id = 1;
}

message QueryProductCategoryDetailResp {
  int64 id = 1; //
  int64 parent_id = 2; //上机分类的编号：0表示一级分类
  string name = 3; //商品分类名称
  int32 level = 4; //分类级别：0->1级；1->2级
  int32 product_count = 5; //商品数量
  string product_unit = 6; //商品数量
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int32 show_status = 8; //显示状态：0->不显示；1->显示
  int32 sort = 9; //排序
  string icon = 10; //图标
  string keywords = 11; //关键字
  string description = 12; //描述

}

// 分页查询产品分类列表
message QueryProductCategoryListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string name = 3; //
  int32 nav_status = 4; //是否显示在导航栏：0->不显示；1->显示
  int32 show_status = 5; //显示状态：0->不显示；1->显示
  int64 parent_id = 6; //上机分类的编号：0表示一级分类
}

message ProductCategoryListData {
  int64 id = 1; //
  int64 parent_id = 2; //上机分类的编号：0表示一级分类
  string name = 3; //商品分类名称
  int32 level = 4; //分类级别：0->1级；1->2级
  int32 product_count = 5; //商品数量
  string product_unit = 6; //商品数量
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int32 show_status = 8; //显示状态：0->不显示；1->显示
  int32 sort = 9; //排序
  string icon = 10; //图标
  string keywords = 11; //关键字
  string description = 12; //描述

}

message QueryProductCategoryListResp {
  int64 total = 1;
  repeated  ProductCategoryListData list = 2;
}

message QueryProductCategoryTreeListReq {

}
message QueryProductCategoryListTreeData{
  int64    Id = 1;
  string  Name = 2;
  string  ImageUrl = 3;
  repeated QueryProductCategoryListTreeData  Children = 4;
}
message QueryProductCategoryListTreeResp {
  repeated  QueryProductCategoryListTreeData list = 1;
}

// 产品分类
service ProductCategoryService {
  // 添加产品分类
  rpc AddProductCategory(AddProductCategoryReq) returns (AddProductCategoryResp){}
  // 删除产品分类
  rpc DeleteProductCategory(DeleteProductCategoryReq) returns (DeleteProductCategoryResp){}
  // 更新产品分类
  rpc UpdateProductCategory(UpdateProductCategoryReq) returns (UpdateProductCategoryResp ){}
  //更新商品分类导航显示状态
  rpc UpdateCategoryNavStatus(UpdateProductCategoryStatusReq) returns(UpdateProductCategoryStatusResp);
  //更新商品分类显示状态
  rpc UpdateCategoryShowStatus(UpdateProductCategoryStatusReq) returns(UpdateProductCategoryStatusResp);
  // 查询产品分类详情
   rpc QueryProductCategoryDetail(QueryProductCategoryDetailReq) returns (QueryProductCategoryDetailResp){}
  // 查询产品分类列表
  rpc QueryProductCategoryList(QueryProductCategoryListReq) returns (QueryProductCategoryListResp){}

  //查询商品分类（tree）
  rpc QueryProductCategoryTreeList(QueryProductCategoryTreeListReq) returns(QueryProductCategoryListTreeResp);

}
